Adjusted timing of goodluck phrase to prevent overlap of fight statement and the play area

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h1 {
   margin-bottom: 50px;
   margin-top: 50px;
 
-  animation-duration: 4s;
+  animation-duration: 3s;
   animation-fill-mode: forwards;
   opacity: 1;
 }
@@ -481,7 +481,7 @@ h4 {
   font-weight: 900;
   margin-bottom: 0;
   animation-name: enter;
-  animation-delay: 3s;
+  animation-delay: 6s;
   animation-duration: 750ms;
   animation-fill-mode: forwards;
   transform: translateY(-270px);
